lo ultimo de los tragos
creo que debería estar haciendo lo de c++

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Eccomerce">
         <activity
+            android:name=".MangoSour"
+            android:exported="false" />
+        <activity
             android:name=".VinoConFrutas"
             android:exported="false" />
         <activity
