vista para crear receta(solo camara)
se creo una activity con un formulario para crear una receta pero solo se creo para pruebas de implementacion del uso de la camara, destacar que no pide permisos porque la imagen que se toma solo es en la app y no se accede a la galeria u otros archivos relacionados, en resumen la camara solo toma una foto que la guerda en local y solo dura el tiempo de ejecucion de la app

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,60 +2,55 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <!-- Permisos -->
+    <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-permission android:name="android.permission.READ_MEDIA_IMAGES"/>
+
+    <!-- Declarar que la cámara es opcional -->
+    <uses-feature android:name="android.hardware.camera" android:required="false" />
+
     <application
         android:allowBackup="true"
-        android:dataExtractionRules="@xml/data_extraction_rules"
-        android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Eccomerce">
-        <activity
-            android:name=".MariscoEmpanada"
-            android:exported="false" />
-        <activity
-            android:name=".QuesoEmpanada"
-            android:exported="false" />
-        <activity
-            android:name=".PinoEmpanada"
-            android:exported="false" />
-        <activity
-            android:name=".Empanadas"
-            android:exported="false" />
-        <activity
-            android:name=".CostillarDeCerdoParrilla"
-            android:exported="false" />
-        <activity
-            android:name=".AnticuchoDePolloYVerduras"
-            android:exported="false" />
-        <activity
-            android:name=".PolloAsadoAlLimon"
-            android:exported="false" />
-        <activity
-            android:name=".MangoSour"
-            android:exported="false" />
-        <activity
-            android:name=".VinoConFrutas"
-            android:exported="false" />
-        <activity
-            android:name=".Terremoto"
-            android:exported="false" />
-        <activity
-            android:name=".Tragos"
-            android:exported="false" />
-        <activity
-            android:name=".Parrillas"
-            android:exported="false" />
-        <activity
-            android:name=".MainActivity"
-            android:exported="true">
+
+        <!-- FileProvider -->
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="com.example.eccomerce.provider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths"/>
+        </provider>
+s
+        <!-- Actividades de tu app -->
+        <activity android:name=".RecetaCrear" android:exported="false" />
+        <activity android:name=".MariscoEmpanada" android:exported="false" />
+        <activity android:name=".QuesoEmpanada" android:exported="false" />
+        <activity android:name=".PinoEmpanada" android:exported="false" />
+        <activity android:name=".Empanadas" android:exported="false" />
+        <activity android:name=".CostillarDeCerdoParrilla" android:exported="false" />
+        <activity android:name=".AnticuchoDePolloYVerduras" android:exported="false" />
+        <activity android:name=".PolloAsadoAlLimon" android:exported="false" />
+        <activity android:name=".MangoSour" android:exported="false" />
+        <activity android:name=".VinoConFrutas" android:exported="false" />
+        <activity android:name=".Terremoto" android:exported="false" />
+        <activity android:name=".Tragos" android:exported="false" />
+        <activity android:name=".Parrillas" android:exported="false" />
+
+        <!-- Actividad principal -->
+        <activity android:name=".MainActivity" android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
     </application>
 
 </manifest>
