Se realizo merge desde master a testbranch y se cambio el color de fondo de la burbuja de texto y se agrego la activity parrillasTodos a manifest
Se realizo merge desde master a testbranch y se cambio el color de fondo de la burbuja de texto y se agrego la activity parrillasTodos a manifest

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,10 @@
         <activity
             android:name=".EmpanadasTodas"
             android:exported="false" /> <!-- FileProvider -->
+        <activity
+            android:name=".ParrillasTodas"
+            android:exported="false" />
+
         <provider
             android:name="androidx.core.content.FileProvider"
             android:authorities="com.example.eccomerce.provider"
