--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Eccomerce">
         <activity
+            android:name=".TragosTodas"
+            android:exported="false" />
+        <activity
             android:name=".recetaMenu"
             android:exported="false" />
         <activity
@@ -24,6 +27,7 @@
         <activity
             android:name=".ParrillasTodas"
             android:exported="false" />
+
 
         <provider
             android:name="androidx.core.content.FileProvider"
